plugins/groovy/testdata/highlighting/DuplicateInnerClass.groovy
class A{
  class <error descr="Duplicate class: 'A'">A</error>{

  }
}